dev/deployments/ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: nginx-ingress-lb
  labels:
    name: nginx-ingress-lb
  namespace: kube-system
spec:
  template:
    metadata:
      labels:
        name: nginx-ingress-lb
      annotations:
        prometheus.io/port: '10254'
        prometheus.io/scrape: 'true'
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - image: gcr.io/google_containers/nginx-ingress-controller:0.9.0-beta.3
        name: nginx-ingress-lb
        readinessProbe:
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
        livenessProbe:
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 1
        ports:
        - containerPort: 80
          hostPort: 80
        - containerPort: 443
          hostPort: 443
        args:
        - /nginx-ingress-controller
        - --default-backend-service=default/go #set the default backend here!
        # - --default-backend-service=$(POD_NAMESPACE)/go

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: default-ingress
  # annotations:
  #   nginx.org/rewrites: "serviceName=nodejs rewrite=/;serviceName=go rewrite=/"
spec:
  rules:
  - host: go.site.com
    http:
      paths:
      - backend:
          serviceName: go
          servicePort: 4444
  - host: node.site.com
    http:
      paths:
      - backend:
          serviceName: nodejs
          servicePort: 3333
  - host: php.site.com
    http:
      paths:
      - backend:
          serviceName: php-app
          servicePort: 6666
